--- a/themes/oora/assets/css/bootstrap-override.css
+++ b/themes/oora/assets/css/bootstrap-override.css
@@ -423,4 +423,8 @@
  *==========================================================================*/
 
 
-
+@media (max-width: 999px) {
+	.row {
+		margin-top: -26px ! important;
+	}
+}
